# HuffmanAlgorithm

./: .gitignore  CMakeLists.txt  README.md  main.c
headers/: compression.h  encode.h  huffman.h  list.h  utils.h
slides/: Huffman compression Algorithm.pptx
src/: decode.c  encode.c  huffman.c  list.c  utils.c
tests/: test.c  test.h
tests/data/: test.h
